Issue 78 and 85 potential fix. Login prompt(S) and logging out. (#92)
* Issue 78 and 85 resolved. Login prompt(S) and logging out.

* Login covering wrong user.

---------

--- a/client/src/pages/css/Login.css
+++ b/client/src/pages/css/Login.css
@@ -22,3 +22,9 @@
     margin: auto;
     margin-top: 32px;
 }
+
+#loginPrompt {
+    text-align: center;
+    margin: 1rem auto;
+    font-size: 1rem;
+}
